// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component should render the leaf 1`] = `
<div
  className="theme-tc-records-viewer-leaf tc-records-viewer-leaf"
>
  <SimpleTextKeyValue
    displayTypes={false}
    formattedKey="myDataKey"
    isLongValueToggled={false}
    isValueOverflown={false}
    schema={
      Object {
        "type": "int",
      }
    }
    typesRenderer={[Function]}
    value={
      Object {
        "value": "myValue",
      }
    }
  />
</div>
`;

exports[`Component should render the leaf highlighted 1`] = `
<div
  className="theme-tc-records-viewer-leaf tc-records-viewer-leaf theme-tc-records-viewer-leaf-highlighted tc-records-viewer-leaf-highlighted"
>
  <SimpleTextKeyValue
    displayTypes={false}
    formattedKey="myDataKey"
    isLongValueToggled={false}
    isValueOverflown={false}
    schema={
      Object {
        "type": "int",
      }
    }
    typesRenderer={[Function]}
    value={
      Object {
        "value": "myValue",
      }
    }
  />
</div>
`;

exports[`Component should render the leaf with additional value 1`] = `
<div
  className="theme-tc-records-viewer-leaf tc-records-viewer-leaf"
>
  <div>
    Additional render for what you want, you can use the value : 
    myValue
  </div>
  <SimpleTextKeyValue
    displayTypes={false}
    formattedKey="myDataKey"
    isLongValueToggled={false}
    isValueOverflown={false}
    schema={
      Object {
        "type": "int",
      }
    }
    typesRenderer={[Function]}
    value={
      Object {
        "value": "myValue",
      }
    }
  />
</div>
`;

exports[`Component should render the leaf with padding offset 1`] = `
<div
  className="theme-tc-records-viewer-leaf tc-records-viewer-leaf"
>
  <SimpleTextKeyValue
    displayTypes={false}
    formattedKey="myDataKey"
    isLongValueToggled={false}
    isValueOverflown={false}
    schema={
      Object {
        "type": "int",
      }
    }
    typesRenderer={[Function]}
    value={
      Object {
        "value": "myValue",
      }
    }
  />
</div>
`;
